<resources>
    <string name="afc_pkey_display_view_type">afc.display.view_type</string>
    <string name="afc_pkey_display_sort_type">afc.display.sort_type</string>
    <string name="afc_pkey_display_sort_ascending">afc.display.sort_ascending</string>
    <string name="afc_pkey_display_show_time_for_old_days_this_year">afc.display.show_time_for_old_days_this_year</string>
    <string name="afc_pkey_display_show_time_for_old_days">afc.display.show_time_for_old_days</string>
    <string name="afc_pkey_display_remember_last_location">afc.display.remember_last_location</string>
    <string name="afc_pkey_display_last_location">afc.display.last_location</string>
    <string name="afc_lib_name">android-filechooser</string>
    <string name="afc_cmd_advanced_selection_all">All</string>
    <string name="afc_cmd_advanced_selection_invert">Invert selection</string>
    <string name="afc_cmd_advanced_selection_none">None</string>
    <string name="afc_cmd_clear">Clear</string>
    <string name="afc_cmd_grid_view">Grid view</string>
    <string name="afc_cmd_home">Home</string>
    <string name="afc_cmd_list_view">List view</string>
    <string name="afc_cmd_new_folder">New folder…</string>
    <string name="afc_cmd_reload">Reload</string>
    <string name="afc_cmd_remove_from_list">Remove from list</string>
    <string name="afc_cmd_select_all_files">Select all files</string>
    <string name="afc_cmd_select_all_folders">Select all folders</string>
    <string name="afc_cmd_sort">Sort…</string>
    <string name="afc_ellipsize">…</string>
    <string name="afc_file">file</string>
    <string name="afc_folder">folder</string>
    <string name="afc_hint_double_tap_to_select_file">Double tap to select file/ folder</string>
    <string name="afc_hint_folder_name">folder name</string>
    <string name="afc_hint_save_as_filename">filename</string>
    <string name="afc_msg_app_doesnot_have_permission_to_create_files">This application does not have permission to create files/ folders</string>
    <string name="afc_msg_app_doesnot_have_permission_to_delete_files">This application does not have permission to delete files/ folders</string>
    <string name="afc_msg_cancelled">Cancelled</string>
    <string name="afc_msg_cannot_connect_to_file_provider_service">Can not connect to file provider service</string>
    <string name="afc_msg_done">Done</string>
    <string name="afc_msg_empty">…empty</string>
    <string name="afc_msg_filename_is_empty">Filename is empty</string>
    <string name="afc_msg_loading">Loading…</string>
    <string name="afc_pmsg_cannot_access_dir">Can not access \"%1$s\"</string>
    <string name="afc_pmsg_cannot_create_folder">Can not create folder \"%1$s\"</string>
    <string name="afc_pmsg_cannot_delete_file">Can not delete %1$s \"%2$s\"</string>
    <string name="afc_pmsg_confirm_delete_file">Are you sure you want to delete this %1$s \"%2$s\"?</string>
    <string name="afc_pmsg_confirm_replace_file">This file \"%1$s\" already exists.\n\nDo you want to replace it?</string>
    <string name="afc_pmsg_deleting_file">Deleting %1$s \"%2$s\"…</string>
    <string name="afc_pmsg_file_has_been_deleted">…%1$s \"%2$s\" has been deleted</string>
    <string name="afc_pmsg_filename_is_directory">\"%1$s\" is a folder</string>
    <string name="afc_pmsg_filename_is_invalid">File name \"%1$s\" is invalid</string>
    <string name="afc_pmsg_max_file_count_allowed">…has more files, max allowed: %1$,d</string>
    <string name="afc_pmsg_unknown_error">Unknown error: %1$s</string>
    <string name="afc_pmsg_xxx_items">%1$,d items</string>
    <string name="afc_root">Root</string>
    <string name="afc_title_advanced_selection">Select…</string>
    <string name="afc_title_alert">Alert</string>
    <string name="afc_title_choose_directories">Choose folders…</string>
    <string name="afc_title_choose_files">Choose files…</string>
    <string name="afc_title_choose_files_and_directories">Choose files/ folders…</string>
    <string name="afc_title_confirmation">Confirmation</string>
    <string name="afc_title_date">Date</string>
    <string name="afc_title_error">Error</string>
    <string name="afc_title_history">History</string>
    <string name="afc_title_info">Info</string>
    <string name="afc_title_name">Name</string>
    <string name="afc_title_save_as">Save as…</string>
    <string name="afc_title_size">Size</string>
    <string name="afc_title_sort_by">Sort by…</string>
    <string name="afc_yesterday">Yesterday</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">byLock</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password_re">New Password (Again)</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registering">Registering</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_group">New Group</string>
    <string name="add_group_hint">Leave blank to cancel</string>
    <string name="delete_group">Delete Group</string>
    <string name="rename_group">Rename Group</string>
    <string name="set_tones">Set Notifications</string>
    <string name="set_ringtone">Call</string>
    <string name="set_filetone">File</string>
    <string name="set_mailtone">Mail</string>
    <string name="set_msgtone">Message</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="broke_connection">It seems that you dont have internet connection, do you really want to continue?</string>
    <string name="yes">Yes</string>
    <string name="status">Status</string>
    <string name="status_offline">Offline</string>
    <string name="status_busy">Busy</string>
    <string name="status_away">Away</string>
    <string name="status_available">Available</string>
    <string name="accept">I Accept</string>
    <string name="domain">Domain</string>
    <string name="exit">Exit</string>
    <string name="unable_to_open">There is no application to open file.</string>
    <string name="key_password">New Password</string>
    <string name="key_password_re">New Password (Again)</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_server">Domain</string>
    <string name="login_progress_signing_in">Signing in</string>
    <string name="error_field_required">This field is required</string>
    <string name="name">Name</string>
    <string name="public_message">Public Message</string>
    <string name="are_you_leaving">Do you really wish to quit app?</string>
    <string name="key_password_create">Register</string>
    <string name="confirm">Confirm</string>
    <string name="validate">Validate</string>
    <string name="invalidate">Invalidate</string>
    <string name="nick">Nickname</string>
    <string name="nick_opt">Nickname (Optional)</string>
    <string name="confirm_code">Confirmation Code</string>
    <string name="no_key">The user has no key, you cannot communicate!!!</string>
    <string name="draw_sth">Draw something random</string>
    <string name="choose_ringtone">Choose Ringtone</string>
    <string name="choose_mailtone">Choose Mail Tone</string>
    <string name="choose_message_notication">Choose Message Tone</string>
    <string name="choose_filetone">Choose Incoming File Notification</string>
    <string name="select_from">Select From</string>
    <string name="built_in_library">Built-in Library</string>
    <string name="costum_library">Gallery</string>
    <string name="ignore">Ignore</string>
    <string name="fake_sas">Mismatch</string>
    <string name="loading">Loading…</string>
    <string name="recipients">Recipients</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="attachments">Attachments</string>
    <string name="from">From</string>
    <string name="to">To :</string>
    <string name="menu_make_call">Call</string>
    <string name="menu_send_file">Send File</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_show_lock">Verification</string>
    <string name="menu_send_mail">Send Mail</string>
    <string name="menu_show_profile">View Profile</string>
    <string name="menu_add_file">Add File</string>
    <string name="menu_add_recipient">Add Recipient</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_clear_history">Clear History</string>
    <string name="menu_done">Done</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_reply">Reply</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_trash">Clear</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_send_logs">Send Debug Logs</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_send">Send</string>
    <string name="menu_attach">Attach</string>
    <string name="dots">● ● ● ● ● ●</string>
    <string name="add">Add</string>
    <string name="send">Send</string>
    <string name="answer">answer</string>
    <string name="discard">discard</string>
    <string name="call_coming">INCOMING CALL</string>
    <string name="call_going">OUTGOING CALL</string>
    <string name="call_calling">CALLING</string>
    <string name="call_ringing">RINGING</string>
    <string name="call_rejected">REJECTED</string>
    <string name="call_ended">ENDED</string>
    <string name="call_busy">BUSY</string>
    <string name="call_cancelled">CANCELLED</string>
    <string name="call_answered">ANSWERED</string>
    <string name="call_missed">MISSED</string>
    <string name="call_error">ERROR</string>
    <string name="end">end</string>
    <string name="mute">mute</string>
    <string name="pin">Pin</string>
    <string name="pad_0">0</string>
    <string name="pad_1">1</string>
    <string name="pad_2">2</string>
    <string name="pad_3">3</string>
    <string name="pad_4">4</string>
    <string name="pad_5">5</string>
    <string name="pad_6">6</string>
    <string name="pad_7">7</string>
    <string name="pad_8">8</string>
    <string name="pad_9">9</string>
    <string name="fr_body">First run is detected, trying to find proper frequency.</string>
    <string name="fr_current">Checking for frequency:</string>
    <string name="fr_retry">Retry</string>
    <string name="fr_ok">OK, Go on</string>
    <string name="select_all">Select/Unselect All</string>
    <string name="copy_selection">Copy Selection</string>
    <string name="delete_selection">Delete Selection</string>
    <string name="rename">Rename</string>
    <string name="remove_from_group">Remove from Group</string>
    <string name="move_to_group">Move to Group</string>
    <string name="weak_password">Change Password</string>
</resources>