<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/WhiteSmoke" android:paddingLeft="@dimen/aaa_unit_one" android:paddingRight="@dimen/aaa_unit_one" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="22sp" android:textColor="@color/White" android:id="@id/name" android:background="@color/aaa_blue_button_background" android:padding="@dimen/aaa_unit_half" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <View android:background="@color/Gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    <TextView android:textSize="20sp" android:textColor="@color/Black" android:id="@id/textView1" android:padding="@dimen/aaa_unit_half" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/rename" />
    <View android:background="@color/Gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    <TextView android:textSize="20sp" android:textColor="@color/Black" android:id="@id/textView2" android:padding="@dimen/aaa_unit_half" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/delete" />
    <View android:background="@color/Gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    <TextView android:textSize="20sp" android:textColor="@color/Black" android:id="@id/textView3" android:padding="@dimen/aaa_unit_half" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/move_to_group" />
    <View android:background="@color/Gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    <TextView android:textSize="20sp" android:textColor="@color/Black" android:id="@id/textView4" android:padding="@dimen/aaa_unit_half" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/remove_from_group" />
</LinearLayout>
