<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:padding="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fr_body" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/imageView1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="-20dp" android:scaleType="fitXY" android:adjustViewBounds="true" android:layout_below="@id/textView1" android:layout_centerHorizontal="true" android:contentDescription="@string/accept" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginRight="6dp" android:text="@string/fr_current" android:layout_below="@id/textView1" android:layout_alignParentLeft="true" />
    <TextView android:textColor="@color/Orange" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6dp" android:text="@string/accept" android:layout_toLeftOf="@id/progressBar1" android:layout_toRightOf="@id/textView2" android:layout_alignBaseline="@id/textView2" android:layout_alignBottom="@id/textView2" />
    <ProgressBar android:id="@id/progressBar1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/textView3" android:layout_alignRight="@id/imageView1" android:layout_alignBottom="@id/textView3" style="?unknown_attr_ref: 1010079" />
    <LinearLayout android:id="@id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_below="@id/textView2">
        <Button android:id="@id/button1" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fr_retry" android:layout_weight="1.0" style="?unknown_attr_ref: 1010049" />
        <Button android:id="@id/button2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fr_ok" android:layout_weight="1.0" style="?unknown_attr_ref: 1010049" />
    </LinearLayout>
    <ImageView android:id="@id/imageView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="-20dp" android:scaleType="fitXY" android:adjustViewBounds="true" android:layout_below="@id/textView2" android:contentDescription="@string/accept" />
</RelativeLayout>
