<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/WhiteSmoke" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/imageView1" android:layout_width="UNKNOWN_DATA_0x7f08001e" android:layout_height="UNKNOWN_DATA_0x7f08001e" android:layout_marginTop="@dimen/aaa_unit_one" android:src="@drawable/myavatar" android:layout_centerHorizontal="true" android:contentDescription="@string/app_name" />
        <EditText android:textColor="@color/aaa_blue_text_over_white_edittext" android:textColorHint="@color/aaa_blue_hint_over_white_edittext" android:id="@id/editText1" android:background="@drawable/blue_frame_username" android:paddingLeft="@dimen/aaa_unit_mini" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f080033" android:layout_marginLeft="@dimen/aaa_unit_one" android:layout_marginTop="@dimen/aaa_unit_one" android:layout_marginRight="@dimen/aaa_unit_one" android:hint="@string/username" android:layout_below="@id/imageView1" />
        <EditText android:textColor="@color/aaa_blue_text_over_white_edittext" android:textColorHint="@color/aaa_blue_hint_over_white_edittext" android:id="@id/editText2" android:background="@drawable/blue_frame_username" android:paddingLeft="@dimen/aaa_unit_mini" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f080033" android:layout_marginLeft="@dimen/aaa_unit_one" android:layout_marginTop="@dimen/aaa_unit_one" android:layout_marginRight="@dimen/aaa_unit_one" android:hint="@string/nick_opt" android:layout_below="@id/editText1" />
        <Button android:id="@id/button1" android:background="@color/aaa_blue_button_background" android:paddingLeft="@dimen/aaa_unit_half" android:paddingRight="@dimen/aaa_unit_half" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aaa_unit_one" android:text="@string/add_friend" android:layout_below="@id/editText2" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>
