<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/WhiteSmoke" android:paddingLeft="@dimen/aaa_unit_one" android:paddingRight="@dimen/aaa_unit_one" android:paddingBottom="@dimen/aaa_unit_one" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="22sp" android:textColor="@color/White" android:id="@id/textView1" android:background="@color/aaa_blue_button_background" android:padding="@dimen/aaa_unit_half" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/aaa_unit_one" android:text="@string/weak_password" />
    <EditText android:textColor="@color/aaa_blue_text_over_white_button" android:textColorHint="@color/aaa_blue_hint_over_white_edittext" android:id="@id/editText1" android:background="@drawable/blue_frame_username" android:paddingLeft="@dimen/aaa_unit_mini" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f080034" android:layout_marginBottom="@dimen/aaa_unit_one" android:hint="@string/new_password" android:layout_below="@id/textView1" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone">
        <requestFocus />
    </EditText>
    <EditText android:textColor="@color/aaa_blue_text_over_white_button" android:textColorHint="@color/aaa_blue_hint_over_white_edittext" android:id="@id/editText2" android:background="@drawable/blue_frame_username" android:paddingLeft="@dimen/aaa_unit_mini" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f080034" android:layout_marginBottom="@dimen/aaa_unit_one" android:hint="@string/new_password_re" android:layout_below="@id/editText1" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
    <Button android:enabled="false" android:textColor="@color/White" android:id="@id/button1" android:background="@color/aaa_blue_button_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/save" android:ems="5" android:layout_below="@id/editText2" android:layout_alignRight="@id/textView1" />
</RelativeLayout>
